fixed horizontial scroll on mobile when side bar active

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -241,6 +241,9 @@ h1, h2, h3, h4, h5, h6 {
    .socials {
         display: none;
    }
+   div.mainContent.navActive {
+    display: none
+   }
    div.mainContent.navActive > * {
         display: none;
    }
